车道连通功能修改：梳理了之前的代码，优化了部分不合理的地方

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -187,6 +187,12 @@
                                 <div ng-include="rdLaneTopoPanelTpl"></div>
                             </div>
                         </div> -->
+                        <div class="fm-foldable fm-row" style="height:100%;left:2px;width:auto;"
+                             ng-style="{'top':{true: '0px', false: '-1100px'}[clmPanelOpened], right: '0px'}">
+                            <div class="fm-container fm-row" style="height:100%;">
+                                <div ng-include="rdLaneTopoPanelTpl"></div>
+                            </div>
+                        </div>
                         <div ng-class="{true:'popoverTips animated-fast fadeInLeft',false:'popoverTips animated-fast fadeOutLeft'}[tipsPanelOpened]">
                             <div ng-include="tipsTplContainer" class="tipsPanel"></div>
                         </div>
@@ -202,6 +208,7 @@
                 <img ng-src="{{pImageNow.originUrl}}"/>
             </div>
         </div>
+
         </div>
         </div>
 
