1.引入hotkey插件，解决车信的ctrl、shift快捷键+其他按钮也会起作业的问题； 2.改进tooltipcontroller

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-datepicker/css/datepicker3.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/srs/srs.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/select2/css/select2.css">
+        <link rel="stylesheet" type="text/css" href="../../../scripts/libs/angular-hotkey/hotkeys.css">
         <script src="../../../scripts/libs/leaflet-0.7.3/leaflet-src.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/wicket.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/Control.MiniMap.js"></script>
