--- a/apps/newImeep/editor/mapeditor.html
+++ b/apps/newImeep/editor/mapeditor.html
@@ -29,15 +29,10 @@
         border-left: 0;
     }
 
-    .right-property-left {
-        background: url("../../../images/road/img/arrow-left.png") no-repeat center center;
-        border: 1px solid grey;
+    .openRightPanel {
         position: absolute;
-        right: 0;
-        top: 20px;
-        width: 15px;
-        height: 30px;
-        border-right: 0;
+        right: 10px;
+        top: 10px;
     }
 
     .right-property-right {
@@ -169,6 +164,9 @@
 
         </div>
     </div>
+    <img src="../../../images/newPoi/leftPanelIcon/icon-back-left.png" class="openRightPanel"
+         ng-click="closeRightPanel()" ng-style="{'display':rightPanelFlag?'none':'block'}">
+
     <div class="right-property-left" ng-click="closeRightPanel()" ng-style="{'display':rightPanelFlag?'none':'block'}">
 
     </div>
