--- a/apps/newImeep/editor/mapeditor.html
+++ b/apps/newImeep/editor/mapeditor.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-3.3.5/css/bootstrap-theme.css"/>
 <link rel="stylesheet" type="text/css" href="../../../scripts/libs/font-awesome-4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="../../../scripts/libs/leaflet-0.7.3/leaflet.css">
-
+<link rel="stylesheet" type="text/css" href="../../../styles/imeep/editor_poi.css">
 <link rel="stylesheet" type="text/css" href="../../../scripts/libs/sweet-alert-upgrade/sweetalert.css"/>
 <style>
     .mapcontainer {
@@ -17,35 +17,11 @@
         left: 10px;
         top: 10px;
     }
-
-    .arrow-right {
-        background: url("../../../images/road/img/arrow-right.png") no-repeat center center;
-        position: absolute;
-        left: 0;
-        top: 20px;
-        width: 15px;
-        height: 30px;
-        border: 1px solid grey;
-        border-left: 0;
-    }
-
     .openRightPanel {
         position: absolute;
         right: 10px;
         top: 10px;
     }
-
-    .right-property-right {
-        background: url("../../../images/road/img/arrow-right.png") no-repeat center center;
-        width: 15px;
-        height: 30px;
-        border: 1px solid grey;
-        border-left: 0;
-        display: inline-block;
-        float: left;
-        margin-top: 25px;
-    }
-
     .userListStyle {
         position: absolute;
         top: 20px;
