--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -141,17 +141,17 @@
                                 <div style="bottom: 0px;position:absolute;width: 100%;">
                                     <div class="btn-group btn-group-justified fm-btn-group">
                                         <div class="btn-group" role="group">
-                                            <button type="button" class="btn btn-xs" ng-click="doSave()">
+                                            <button type="button" class="btn btn-xs" ng-click="doSave($event)">
                                             <i class="glyphicon glyphicon-floppy-disk"></i> 保 存
                                             </button>
                                         </div>
                                         <div class="btn-group" role="group">
-                                            <button type="button" class="btn btn-xs" ng-click="doDelete()">
+                                            <button type="button" class="btn btn-xs" ng-click="doDelete($event)">
                                             <i class="glyphicon glyphicon-trash"></i> 删 除
                                             </button>
                                         </div>
                                         <div class="btn-group" role="group">
-                                            <button type="button" class="btn btn-xs" ng-click="doCancel()">
+                                            <button type="button" class="btn btn-xs" ng-click="doCancel($event)">
                                             <i class="glyphicon glyphicon-floppy-remove"></i> 取 消
                                             </button>
                                         </div>
