--- a/apps/newImeep/index.html
+++ b/apps/newImeep/index.html
@@ -57,6 +57,7 @@
     <script src="editor/templates/mapController.js"></script>
     <script src="editor/templates/poiLeftPanelCtrl.js"></script>
     <script src="editor/templates/poiRightPanelCtrl.js"></script>
+    <script src="editor/templates/rightTool/userToolCtrl.js"></script>
     <!--<script src="task/taskSelectionCtl.js"></script>-->
 
 
