--- a/apps/newImeep/editor/mapeditor.html
+++ b/apps/newImeep/editor/mapeditor.html
@@ -193,7 +193,7 @@
          ng-click="closeRightPanel()" ng-style="{'display':rightPanelFlag?'none':'block'}">
 
     <!--左侧弹出栏-->
-    <div style="height: 100%;position: absolute;top: 0;left: 0;width: 560px;z-index: 5"
+    <div style="height: 100%;position: absolute;top: 0;left: 0;z-index: 5"
          ng-style="{'display':leftPanelFlag?'block':'none'}">
         <div ng-include src="leftPanelTemp" style="height: 100%">
 
