--- a/apps/newImeep/index.html
+++ b/apps/newImeep/index.html
@@ -58,6 +58,7 @@
     <script src="editor/templates/poiLeftPanelCtrl.js"></script>
     <script src="editor/templates/poiRightPanelCtrl.js"></script>
     <script src="editor/templates/rightTool/userToolCtrl.js"></script>
+    <script src="editor/templates/roadLeftPanelCtrl.js"></script>
     <!--<script src="task/taskSelectionCtl.js"></script>-->
 
 
